--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@ body {
   align-items: center;
   width: 100%;
   justify-content: center;
+  background-color: #333; 
 }
 .App {
   font-family: "Arial", sans-serif;
