--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   background-color: #333; 
 }
+
 .App {
   font-family: "Arial", sans-serif;
   background-color: #1a1a1a; 
@@ -41,6 +42,11 @@ h1 {
   text-align: left;
 }
 
+.checkbox input{
+  width: 100%;
+  cursor: pointer
+}
+
 .Job-table th {
   background-color: #ff9900; 
   color: #1a1a1a; 
@@ -59,3 +65,4 @@ h1 {
 .Job-table a:hover {
   background-color: #cc7a00; 
 }
+
